--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
